name:               src
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10

executable site
  main-is:          site.hs
  build-depends:    base == 4.*
                  , hakyll == 4.*
                  , aeson
                  , bytestring
                  , containers
                  , directory
                  , interpolate
                  , extra
                  , pandoc
                  , pandoc-types
                  , raw-strings-qq
                  , split
                  , unordered-containers
  ghc-options:      -threaded -Wall -rtsopts
  other-modules:    ImageRefsCompiler
                  , CustomFields
  default-language: Haskell2010
