name:               src
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10

executable site
  main-is:          site.hs
  build-depends:    base == 4.*
                  , hakyll == 4.9.*
                  , split
                  , extra
                  , unordered-containers
                  , interpolate
  ghc-options:      -threaded -Wall
  default-language: Haskell2010
