name:               src
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10

executable site
  main-is:          site.hs
  build-depends:    base == 4.*
                  , hakyll == 4.*
                  , split
                  , extra
                  , unordered-containers
                  , containers
                  , interpolate
                  , directory
                  , monadlist
  ghc-options:      -threaded -Wall -rtsopts
  other-modules:    ImageRefsCompiler
                  , CustomFields
  default-language: Haskell2010
